[package]
name = "schedule-copy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive"] }
cron = "0.10.1"
env_logger = "0.9.0"
log = "0.4.16"
rayon = "1.5.1"
walkdir = "2.3.2"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimi
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dev-dependencies]
ctor = "0.1.22"
once_cell = "1.10.0"
rand = "0.8.5"
tempfile = "3.3.0"
